--- a/ui-app/angular.json
+++ b/ui-app/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "ui-app": {
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "ui-app"
+    }
+  },
+  "defaultProject": "ui-app",
+  "cli": {
+    "analytics": false
+  }
 }
